# telegram_bot_boilerplate

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py  settings.py
app/exceptions/: base.py
app/handlers/: errors.py
docker_compose/: bot.yaml
